# LightGBM

./: .dir-locals.el
model-manager/: LICENSE.rst  README.md  requirements.txt  setup.cfg  setup.py
model-manager/LightGBM/: __init__.py  model.py
