[metadata]
name = lightgbm-models
version = attr: src.VERSION
description = Model training, persistence, and evaluation from the CLI.
long_description = file: README.rst, LICENSE.rst
keywords = machine-learning, data, LightBGM
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/train.py
  bin/classify.py

[options.package_data]
* = *.txt, *.rst, *.dat

[options.install_requires]
lightgbm
numpy
pandas
pkg-resources
python-dateutil
pytz
scikit-learn
scipy
six

[options.packages.find]
exclude =
    src.subpackage1
    src.subpackage2