[metadata]
name = lightgbm-models
version = attr: LightGBM.VERSION
description = Model training, persistence, and evaluation from the CLI.
long_description = file: README.md, LICENSE.rst
keywords = machine-learning, data, LightBGM
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/train
  bin/classify
install_requires =
    lightgbm
    numpy
    pandas
    pkg-resources
    python-dateutil
    pytz
    scikit-learn
    scipy
    six

[options.package_data]
* = *.txt, *.rst, *.dat
